# yuanshao-bot

./: .env.example  Cargo.toml  inscritos.json  limpar_entregas.sh  missoes.json  registro_shu.json  registro_wei.json  registro_wu.json  shu.json  wei.json  wu.json
src/: main.rs
