[package]
name = "yuanshao-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
frankenstein = { version = "0.44.0", features = ["client-reqwest"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }
chrono = "0.4"
regex = "1"
